--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
-#Tue Nov 20 20:37:42 YEKT 2012
-app.grails.version=2.1.1
+#Sun Jun 17 00:53:37 CST 2012
+app.grails.version=2.0.4
 app.name=lesscss-resources
-plugins.hibernate=2.1.1
+plugins.hibernate=2.0.4
